# markdown-viewer

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md
.github/: pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: DEVELOPMENT.md  RELEASE.md  TAURI_API.md  THIRD_PARTY_LICENSES.md
frontend/: ARCHITECTURE.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml
frontend/src/: architecture.boundaries.test.ts  main.ts  style.css
frontend/src/application/: diagnostics.test.ts  diagnostics.ts  document-load-use-case.ts  document-tabs.test.ts  document-tabs.ts  document-workspace-session-service.ts  document-workspace-tabs-use-case.test.ts  document-workspace-tabs-use-case.ts  find-navigation.test.ts  find-navigation.ts  link-navigation.test.ts  link-navigation.ts  path-utils.test.ts  path-utils.ts  ports.ts  reader-layout.test.ts  reader-layout.ts  recent-documents.test.ts  recent-documents.ts  (+8 more)
scripts/: cleanup-release-assets.sh  smoke-desktop-linux.sh  test-all.sh  verify.sh
src-tauri/: ARCHITECTURE.md  Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/application/: Cargo.toml
src-tauri/crates/application/src/: error.rs  input_ports.rs  lib.rs  models.rs  ports.rs  use_cases.rs
src-tauri/crates/application/src/use_cases/: load_markdown_file.rs  mod.rs  open_linked_file.rs  test_support.rs  watch_markdown_file.rs
src-tauri/crates/domain/: Cargo.toml
src-tauri/crates/domain/src/: document.rs
src-tauri/crates/infrastructure/: Cargo.toml
src-tauri/crates/infrastructure/src/: comrak_renderer.rs  file_repository.rs  file_watcher.rs  lib.rs  linked_file_opener.rs
src-tauri/crates/presentation/: Cargo.toml
src-tauri/crates/presentation/src/: dto.rs  lib.rs  state.rs
src-tauri/src/: lib.rs
src-tauri/tests/: bundle_file_associations.rs  clean_architecture_boundaries.rs  watch_flow_integration.rs
test-fixtures/link-behavior/: main.md  secondary.md
(+59 files in other folders)
