[package]
name = "markdown_viewer_infrastructure"
version = "0.1.0-alpha.1"
license = "AGPL-3.0-only"
edition = "2021"
rust-version = "1.77.2"

[dependencies]
comrak.workspace = true
notify.workspace = true
url.workspace = true
markdown_viewer_application = { path = "../application" }
markdown_viewer_domain = { path = "../domain" }
